kubernetes/apps/radar/radar/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radar
  namespace: radar
spec:
  parentRefs:
    - name: apps
      namespace: envoy-gateway-system
  hostnames:
    - radar.geod.es
  rules:
    - backendRefs:
        - name: oauth2-proxy
          port: 4180
