kubernetes/apps/radar/radar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radar
  namespace: radar
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: radar
      port:
        number: 9280
  tls:
    - hosts:
        - radar
